# Loki

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Loki.sln  README.md  generate_gitversion.bat  makefile
.githooks/: pre-commit
Backend/: Backend.vcxproj  Backend.vcxproj.filters  gamestate.cpp  loki.pch.h
Legacy/: Legacy.vcxproj  bench.cpp  bitboard.h  evaltable.h  main.cpp  move.cpp  perft.cpp  position.h  search_const.h  texel.cpp  transposition.h
Loki/: CMakeLists.txt  DebugInfo.natvis  Loki.rc  Loki.vcxproj  Loki.vcxproj.filters  MoveVisualizer.natvis  bench.cpp  bench.h  bitboard.cpp  bitboard.h  defs.h  defs.hpp  evaltable.cpp  evaltable.h  evaluation.cpp  evaluation.h  loki.pch.cpp  loki.pch.h  loki.pch.hpp  loki_engine.cpp  loki_engine.hpp  magics.cpp  main.cpp  misc.cpp  misc.h  move.cpp  move.h  movegen.cpp  movegen.h  movestager.cpp  movestager.h  network.cpp  network.h  pawnhash.cpp  pawnhash.h  perft.cpp  perft.h  position.cpp  position.h  psqt.cpp  (+21 more)
Loki.Deprecated/: Loki.Deprecated.vcxproj  bitboard.cpp  defs.h  evaltable.cpp  evaluation.h  move.h  movegen.cpp  movestager.cpp  perft.h  position.h  psqt.cpp  texel.h  thread.cpp  thread.h  tt_entry.cpp  tt_entry.h  uci.h
Loki.Lib/: Loki.Lib.vcxproj  Loki.Lib.vcxproj.filters  loki.pch.cpp  loki.pch.hpp
Loki.Tests/: CMakeLists.txt  Loki.Tests.vcxproj  Loki.Tests.vcxproj.filters  bitboard_test.cpp  game_state_builder_test.cpp  loki_engine_test.cpp  packages.config  pch.cpp  pch.h  pch.hpp
Loki.Tests/evaluation/: evaluation_trace_test.cpp  evaluator_test.cpp  terms_test.cpp
Loki.Tests/mocks/: context_mock.hpp  game_state_builder_mock.hpp
Loki.Tests/movegen/: i_move_generator_test.cpp  move_list_test.cpp  move_test.cpp
Loki.Tests/movegen/magics/: bishop_generator_test.cpp  magic_generator_test.cpp  magic_index_test.cpp  rook_generator_test.cpp  sliding_generator_test.cpp
Loki.Tests/movegen/magics/generation/: bishop_generator_test.cpp  magic_generator_test.cpp  rook_generator_test.cpp  sliding_generator_test.cpp
Loki.Tests/ordering/: move_picker_test.cpp
Loki.Tests/position/: bitboard_test.cpp  castle_rights_test.cpp  game_state_test.cpp  search_position_test.cpp  square_test.cpp
Loki.Tests/position/io/: fen_reader.hpp  game_state_builder_test.cpp
Loki.Tests/search/: limits_test.cpp  pv_table_test.cpp  search_thread_test.cpp  search_worker_test.cpp  stats_test.cpp
Loki.Tests/stubs/: dev_commands_stub_test.cpp  perft_stub_test.cpp
Loki.Tests/uci/: dev_commands_test.cpp  loki_context_test.cpp  uci_parser_test.cpp  uci_sink_test.cpp
Loki.Tests/util/: rng_test.cpp  stringops_test.cpp
Loki/LNN/: trainer.h
Loki/Loki/: uci.cpp  uci.h
Loki/Loki/contexts/: position_context.h  search_context.h  uci_context.h
Loki/data/: data.cpp  data.h  generate.cpp  generate.h
Loki/evaluation/: evaluator.hpp  terms.hpp  trace.hpp
Loki/evaluation/weights/: builtin_weight_source.hpp  weights.hpp
Loki/lnn/: 768x256x32x32x1.lnn  loader.cpp  loader.h  network.cpp  network.h
Loki/lnn/trainer/: data.cpp  data.h  helpers.h  train_lnn.cpp  train_lnn.h
Loki/lnn/types/: architecture.h  layer.cpp  layer.h
Loki/movegen/: i_move_generator.hpp  move.hpp  move_generator.cpp  move_generator.h  move_generator.hpp  move_generator_templates.hpp  move_list.cpp  move_list.h  move_list.hpp  move_stack.hpp
Loki/movegen/magics/: bishop_generator.cpp  bishop_generator.hpp  hardcoded_index.cpp  hardcoded_index.hpp  magic.hpp  magic_generator.cpp  magic_generator.hpp  magic_index.cpp  magic_index.hpp  magics_index.cpp  magics_index.h  magics_index.hpp  rook_generator.cpp  rook_generator.hpp  slider_generator.h  sliding_generator.cpp  sliding_generator.hpp
Loki/movegen/magics/generation/: bishop_generator.cpp  bishop_generator.hpp  magic.hpp  magic_generator.cpp  magic_generator.hpp  rook_generator.cpp  rook_generator.hpp  sliding_generator.cpp  sliding_generator.hpp
Loki/ordering/: move_picker.hpp  move_scores.hpp
Loki/position/: bitboard.cpp  bitboard.hpp  castle_rights.hpp  castling_rights.h  castling_rights.hpp  game_state.cpp  game_state.hpp  gamestate.cpp  gamestate.h  gamestate.hpp  i_position_view.hpp  position.cpp  position.h  position.hpp  position_history.hpp  position_proxy.cpp  position_proxy.hpp  position_view.hpp  search_position.cpp  search_position.hpp  square.hpp
Loki/position/hashing/: zobrist.cpp  zobrist.hpp
Loki/position/io/: base_builder.hpp  fen_string_builder.cpp  fen_string_builder.hpp  flipped_fen_builder.cpp  flipped_fen_builder.hpp  game_state_builder.cpp  game_state_builder.hpp
Loki/search/: info_sink.hpp  limits.cpp  limits.hpp  perft.cpp  perft.hpp  pv_table.hpp  search_context.cpp  search_context.hpp  search_thread.cpp  search_thread.hpp  search_worker.hpp  stats.hpp
Loki/search/impl/: qsearch.cpp  search_ab.cpp
Loki/uci/: command.hpp  command_parser.cpp  command_parser.h  command_registry.hpp  context.hpp  context_interface.hpp  loki_context.cpp  loki_context.hpp  move_parsing.cpp  move_parsing.hpp  tokenizer.cpp  tokenizer.h  uci.cpp  uci.hpp  uci_parser.cpp  uci_parser.hpp  uci_sink.cpp  uci_sink.hpp
Loki/uci/commands/: debug.cpp  go.cpp  isready.cpp  ponderhit.cpp  position.cpp  quit.cpp  register.cpp  setoption.cpp  stop.cpp  uci.cpp  ucinewgame.cpp
Loki/uci/commands/dev/: move.cpp  perft.cpp  printmoves.cpp  printpos.cpp  undo.cpp
Loki/uci/individual_parsers/: position_parser.h
Loki/util/: arrayops.hpp  bitboard.cpp  bitboard.hpp  exception.hpp  operators.hpp  rng.hpp  stringops.cpp  stringops.hpp
Loki/utility/: perft.cpp  perft.hpp  textutil.hpp
Tests/: Tests.vcxproj  Tests.vcxproj.filters  evaluation.cpp  fen_parser.cpp  misc.cpp  movegen.cpp  ordering.cpp  pch.cpp  pch.h  perft.cpp  position.cpp  search.cpp
benchmark/: gauntlet.py  match_runner.py  perft_benchmark.py  sprt.py
cmake/: LokiIcon.rc.in  create_loki_windows_icon.ps1  loki.desktop.in  write_git_version.cmake
docs/: benchmarking.md  building.md  implementation.md  roadmap.md
tests/: fens.epd  perft.py
tuning positions/: Uden navn.rtf
(+82 files in other folders)
